--- a/practical3/styletags.html
+++ b/practical3/styletags.html
@@ -32,6 +32,14 @@
             Mobile No: <br>
 
         </address>
+        <p>
+            <article>block of news or information</article>
+        </p>
+        <aside>    
+            <button type="submit" onclick="" ><b>Submit</b> 
+
+            </button>
+    </aside>
 
 
     </body>
